@@ -19,14 +19,13 @@ import org.opensearch.sql.ast.expression.Argument;
 import org.opensearch.sql.ast.expression.AttributeList;
 import org.opensearch.sql.ast.expression.Between;
 import org.opensearch.sql.ast.expression.Case;
+import org.opensearch.sql.ast.expression.Cidr;
 import org.opensearch.sql.ast.expression.Compare;
 import org.opensearch.sql.ast.expression.DataType;
 import org.opensearch.sql.ast.expression.EqualTo;
 import org.opensearch.sql.ast.expression.Field;
 import org.opensearch.sql.ast.expression.Function;
 import org.opensearch.sql.ast.expression.In;
-import org.opensearch.sql.ast.expression.subquery.ExistsSubquery;
-import org.opensearch.sql.ast.expression.subquery.InSubquery;
 import org.opensearch.sql.ast.expression.Interval;
 import org.opensearch.sql.ast.expression.IntervalUnit;
 import org.opensearch.sql.ast.expression.IsEmpty;
@@ -35,13 +34,17 @@ import org.opensearch.sql.ast.expression.Literal;
 import org.opensearch.sql.ast.expression.Not;
 import org.opensearch.sql.ast.expression.Or;
 import org.opensearch.sql.ast.expression.QualifiedName;
-import org.opensearch.sql.ast.expression.subquery.ScalarSubquery;
 import org.opensearch.sql.ast.expression.Span;
 import org.opensearch.sql.ast.expression.SpanUnit;
 import org.opensearch.sql.ast.expression.UnresolvedArgument;
 import org.opensearch.sql.ast.expression.UnresolvedExpression;
 import org.opensearch.sql.ast.expression.When;
 import org.opensearch.sql.ast.expression.Xor;
+import org.opensearch.sql.ast.expression.subquery.ExistsSubquery;
+import org.opensearch.sql.ast.expression.subquery.InSubquery;
+import org.opensearch.sql.ast.expression.subquery.ScalarSubquery;
+import org.opensearch.sql.ast.tree.Trendline;
+import org.opensearch.sql.common.antlr.SyntaxCheckException;
 import org.opensearch.sql.common.utils.StringUtils;
 import org.opensearch.sql.ppl.utils.ArgumentFactory;
 
@@ -66,15 +69,6 @@ import static org.opensearch.sql.expression.function.BuiltinFunctionName.TRIM;
  */
 public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<UnresolvedExpression> {
 
-    private static final int DEFAULT_TAKE_FUNCTION_SIZE_VALUE = 10;
-
-    private AstBuilder astBuilder;
-
-    /** Set AstBuilder back to AstExpressionBuilder for resolving the subquery plan in subquery expression */
-    public void setAstBuilder(AstBuilder astBuilder) {
-        this.astBuilder = astBuilder;
-    }
-
     /**
      * The function name mapping between fronted and core engine.
      */
@@ -84,7 +78,12 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
                     .put("isnotnull", IS_NOT_NULL.getName().getFunctionName())
                     .put("ispresent", IS_NOT_NULL.getName().getFunctionName())
                     .build();
+    private AstBuilder astBuilder;
 
+    public AstExpressionBuilder(AstBuilder astBuilder) {
+        this.astBuilder = astBuilder;
+    }
+    
     @Override
     public UnresolvedExpression visitMappingCompareExpr(OpenSearchPPLParser.MappingCompareExprContext ctx) {
         return new Compare(ctx.comparisonOperator().getText(), visit(ctx.left), visit(ctx.right));
@@ -154,7 +153,7 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
     @Override
     public UnresolvedExpression visitBinaryArithmetic(OpenSearchPPLParser.BinaryArithmeticContext ctx) {
         return new Function(
-            ctx.binaryOperator.getText(), Arrays.asList(visit(ctx.left), visit(ctx.right)));
+                ctx.binaryOperator.getText(), Arrays.asList(visit(ctx.left), visit(ctx.right)));
     }
 
     @Override
@@ -245,7 +244,7 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
                 })
                 .collect(Collectors.toList());
         UnresolvedExpression elseValue = new Literal(null, DataType.NULL);
-        if(ctx.caseFunction().valueExpression().size() > ctx.caseFunction().logicalExpression().size()) {
+        if (ctx.caseFunction().valueExpression().size() > ctx.caseFunction().logicalExpression().size()) {
             // else value is present
             elseValue = visit(ctx.caseFunction().valueExpression(ctx.caseFunction().valueExpression().size() - 1));
         }
@@ -290,9 +289,6 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
                 functionName, args.stream().map(this::visitFunctionArg).collect(Collectors.toList()));
     }
 
-    public AstExpressionBuilder() {
-    }
-
     @Override
     public UnresolvedExpression visitMultiFieldRelevanceFunction(
             OpenSearchPPLParser.MultiFieldRelevanceFunctionContext ctx) {
@@ -306,7 +302,7 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
         if (ctx.getChild(0) instanceof OpenSearchPPLParser.IdentsAsTableQualifiedNameContext) {
             return visitIdentsAsTableQualifiedName((OpenSearchPPLParser.IdentsAsTableQualifiedNameContext) ctx.getChild(0));
         } else {
-            return visitIdentifiers(Arrays.asList(ctx));
+            return visitIdentifiers(List.of(ctx));
         }
     }
 
@@ -398,9 +394,9 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
     @Override
     public UnresolvedExpression visitInSubqueryExpr(OpenSearchPPLParser.InSubqueryExprContext ctx) {
         UnresolvedExpression expr = new InSubquery(
-            ctx.valueExpressionList().valueExpression().stream()
-                .map(this::visit).collect(Collectors.toList()),
-            astBuilder.visitSubSearch(ctx.subSearch()));
+                ctx.valueExpressionList().valueExpression().stream()
+                        .map(this::visit).collect(Collectors.toList()),
+                astBuilder.visitSubSearch(ctx.subSearch()));
         return ctx.NOT() != null ? new Not(expr) : expr;
     }
 
@@ -419,6 +415,28 @@ public class AstExpressionBuilder extends OpenSearchPPLParserBaseVisitor<Unresol
         UnresolvedExpression expr = new In(visit(ctx.valueExpression()),
             ctx.valueList().literalValue().stream().map(this::visit).collect(Collectors.toList()));
         return ctx.NOT() != null ? new Not(expr) : expr;
+    }
+
+    @Override
+    public UnresolvedExpression visitCidrMatchFunctionCall(OpenSearchPPLParser.CidrMatchFunctionCallContext ctx) {
+        return new Cidr(visit(ctx.ipAddress), visit(ctx.cidrBlock));
+    }
+
+    @Override
+    public UnresolvedExpression visitTimestampFunctionCall(
+            OpenSearchPPLParser.TimestampFunctionCallContext ctx) {
+        return new Function(
+            ctx.timestampFunction().timestampFunctionName().getText(), timestampFunctionArguments(ctx));
+    }
+
+    private List<UnresolvedExpression> timestampFunctionArguments(
+            OpenSearchPPLParser.TimestampFunctionCallContext ctx) {
+        List<UnresolvedExpression> args =
+            Arrays.asList(
+                new Literal(ctx.timestampFunction().simpleDateTimePart().getText(), DataType.STRING),
+                visitFunctionArg(ctx.timestampFunction().firstArg),
+                visitFunctionArg(ctx.timestampFunction().secondArg));
+        return args;
     }
 
     private QualifiedName visitIdentifiers(List<? extends ParserRuleContext> ctx) {
